# neuroglyph

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT.md  Dockerfile.dev  Dockerfile.fuzz  Dockerfile.test  Dockerfile.valgrind  ETHICAL_USE.md  MONOREPO.md  Makefile  Makefile.docker  NOTICE  README.md  TASKLIST.md  TASKLIST_backup.md  benchmark.sh  build-release.sh  cleanup-build-artifacts.sh  docker-benchmark.sh  docker-compose.yml  install.sh  link-update-summary.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: ci.yml  release.yml
archive/old-status-docs/: MILESTONES.md
c/: CMakeLists.txt  Dockerfile.dev  Dockerfile.fuzz  Dockerfile.test  Dockerfile.ubuntu  Dockerfile.valgrind  Makefile  Makefile.docker  README.md  benchmark.sh  build-release.sh  combined_files.txt  debug-path-test.sh  debug-regression.sh  docker-benchmark.sh  docker-compose.yml  docker-guard.mk  docker-test.sh  fuzz-test.sh  git-mind  gitmind  test-all.sh  test-depth-error.sh  test-minimal-compile.sh  test-minimal.sh  test-multi-compiler.sh  test-path-validation.sh  test-traverse-debug.sh  test-traverse-ultra-simple.sh  test-traverse.sh  test.sh  valgrind-test.sh
c/include/: errors.h  gitmind.h
c/src/: cbor.c  check.c  fanout.c  gitmind.c  link.c  link_v2.c  main.c  orphan_ref.c  path.c  sha1.c  sha256.c  shell_utils.c  status.c  traverse.c  ulid.c
c/tests/: CHANGES.md  CMakeLists.txt  README.md  docker-guard.sh  test_memory_leaks.c
c/tests/integration/: docker-test.sh  fuzz-test.sh  run-all-tests.sh  test-all.sh  test-depth-error.sh  test-minimal.sh  test-output-modes.sh  test-path-validation.sh  test-regression.sh  test-traverse-debug.sh  test-traverse-simple.sh  test-traverse-ultra-simple.sh  test-traverse.sh  test.sh  test_path.c  test_path_validator.c  valgrind-test.sh
c/tests/scripts/: add-docker-guards.sh  docker-guard.sh  run-all-tests.sh  test-newlines.sh
c/tests/unit/: test_path_validation.c
cli/: Cargo.toml
cli/src/: error.rs  filesystem.rs  git.rs  lib.rs  link.rs  main.rs  result.rs  time.rs
cli/src/commands/: check.rs  context.rs  init.rs  link.rs  list.rs  mod.rs  unlink.rs
cli/tests/: check_command.rs  cli_integration.rs  edge_cases.rs  git_edge_cases.rs  init_command.rs  link_command.rs  list_command.rs  unlink_command.rs
cli/tests/common/: mod.rs
demos/: README.md
demos/archive/poc-2025-06-10/: Dockerfile.testenv  README.md  docker-compose.test.yml  fixed_chaos_script.sh  git_graph_client.html  setup.sh  (+4 more)
demos/mvp/: Dockerfile  setup-demo.sh  test-demo.sh
demos/vault/: README.md
design/: ARCHITECTURE.md  README.md  architecture.md  gitmind-whitepaper.md  gitmind_architecture.md  next-steps.md
design/audits/: gitoxide-test-double-analysis.md  test-double-audit.md
design/decisions/: ADR-001-link-storage.md  ADR-002-gitoxide-migration.md  ADR-003-web-visualization-strategy.md  ADR-004-error-handling-improvements.md  ADR-005-transport-strategy.md  ADR-006-markdown-driven-help.md  ADR-008-polyglot-architecture.md  ADR-009-c.md
design/features/: F001-git-object-storage.md  F004-cross-repo-references.md  F005-bidirectional-links.md  F013-cli-tools.md  F014-backup-recovery.md  F016-link-hygiene.md  F017-error-handling-improvements.md  F020-graph-visualization-engine.md  feature-test-mapping.md
design/ideas/: git-notes-for-semantic-enrichment.md  git-notes-spec-idea.md
design/issues/: ISSUE-0001-Gitoxide-API.md
design/proposals/: error-handling-improvement.md  local-web-companion.md
design/research/: c.md  language-decision-matrix.md  language-future-implications.md
docs/: ARCHITECTURE-C.md  ARCHITECTURE.md  QUICK_START.md  README.md  gitmind-whitepaper.md  phase0-complete.md
docs/archive/: MILESTONE_ROADMAP.md  QUICK_START_RECOVERY.md  README.md  SEMANTIC_GIT_THEORY.md  TODO_CHECKLIST.md  git-knowledge-graph-breakthrough-success.md  git-knowledge-graph-debug-guide.md  web-interface-debugging-status.md
docs/audits/: documentation-debt-resolved-2025-06-14.md  feature-test-mapping.md  phase1-fixes-tracking.md  test-reorganization-2025-06-14.md
docs/cli/: Dockerfile.man  generate-man-pages.sh  gitmind-init.1.md  gitmind-init.md  gitmind-link.1.md  gitmind.1.md  gitmind.md
docs/decisions/: ADR-007-language-pivot-to-go.md  LICENSE_DECISION.md
docs/features/: F001-git-object-storage.md  F003-git-hook-integration.md  F008-semantic-query-interface.md  F015-enterprise-features.md  F019-local-web-server.md  F021-interactive-graph-editing.md  F023-search-and-filter-ui.md  F026-basic-graph-traversal.md  F027-path-finding.md  F030-pluggable-query-languages.md  F031-markdown-transclusion.md  feature-test-mapping.md
docs/ideas/: straight-c.md
docs/issues/: ISSUE-0001-Gitoxide-API.md
docs/proposals/: markdown-driven-help.md  web-visualization-revival.md
docs/research/: c-language-decision.md  language-pivot-analysis.md
go/: go.mod  test_integration_test.go
include/: gitmind.h
lore/: CLAUDE_DEV_THOUGHTS.md  CLAUDE_FINAL_NOTE.md  CLAUDE_REFLECTIONS.md  CLAUDE_REFLECTIONS_JUNE_2025.md  GITMIND_MANIFESTO.md  GNS-001-reaction.md  GONZAI_PERSONALITY.md  README.md  love-letter-to-discovery.md  poem-for-the-revolution.md  reflections-the-night-we-changed-computing.md  the-vision-where-we-go-from-here.md
project/: README.md  TASKLIST.md
project/community/: CODE_OF_CONDUCT.md  early-testers.md
project/legal/: SECURITY.md
project/meta/: MONOREPO.md  REORGANIZATION-2025-06-14.md
scripts/: README.md  post-checkout  post-commit  post-merge  pre-push  pre-push-combined  setup-dev.sh
src/: cbor.c  fanout.c  gitmind.c  link.c  main.c  orphan_ref.c  path.c  sha1.c  shell_utils.c
testdata/: README.md
tests/: CMakeLists.txt  README.md
tests/integration/: test-depth-error.sh  test-output-modes.sh  test-path-validation.sh  test-regression.sh  test-traverse.sh  test.sh
tests/scripts/: test-newlines.sh
tests/tools/: docker-test.sh  fuzz-test.sh  test-multi-compiler.sh
tests/unit/: CMakeLists.txt  test_memory_leaks.c  test_path_validation.c
(+98 files in other folders)
