[package]
name = "gitmind"
version = "0.1.0"
edition = "2021"
authors = ["J. Kirby Ross <ross@neuroglyph.dev>"]
license = "Apache-2.0"
description = "CLI for Neuroglyph - Git as a substrate for distributed semantic memory"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
sha1 = "0.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
